kubernetes-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: sample-app
  ports:
  - port: 7777
    targetPort: 7777
