kubernetes-manifests/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type:  NodePort
  selector:
    app: traefik
  ports:
    - name: traefik
      port: 7777
      nodePort: 30182
      targetPort: 7777
